Update Directory Listing “agata-zurek-web-development”

--- a/src/listings/agata-zurek-web-development.html
+++ b/src/listings/agata-zurek-web-development.html
@@ -1,7 +1,7 @@
 ---
-title: Agata Zurek Web Development
-address: 3185 Eagle Creek Rd
-website: agatazurek.com
+title: Test Business Name
+address: 1234 Happy Lane
+website: ""
 phone: ""
-geometry: '{"type":"Point","coordinates":[-117.3979819,49.4834051]}'
+geometry: '{"type":"Point","coordinates":[-117.3918235,49.486667]}'
 ---
